css/schedule.scss
@use "sass:color";
@use "./_variables.scss" as *;

.schedule {
  #emf-container {
    /* To make sticky work */
    overflow: initial !important;
  }
}
.filters {
  background-color: $brand-2026-light-blue;
  margin-top: 1em;

  h3 {
    color: black;
    margin-top: 0;
    font-size: 1.2em;
  }

  .panel-title {
    display: flex;
    justify-content: space-between;
    background-color: $brand-2026-light-blue;
    border: none;
  }

  .panel-heading {
    background-color: $brand-2026-light-blue;
    border: none;
  }
}

.schedule-day h2 {
  border-bottom: 2px solid #fff;
  padding-bottom: 2px;
  position: sticky;
  background: $brand-2026-dark-blue;
  top: 0;
}

.schedule-hour {
  padding-left: 1px;
  padding-right: 1px;
}

@media (max-width: 550px) {
  .schedule-day h2 {
    top: 54px;
  }
}

.no-recording {
  display: grid;
  grid-template-columns: [overlay] 32px;
  grid-template-rows: [overlay] 32px;

  .camera {
    grid-area: overlay;
    margin-top: auto;
    text-align: center;
  }

  .slash {
    grid-area: overlay;
    color: #e62b27;
  }
}

.favourite {
  color: #f6a318;
}

.form-inline .checkbox {
  margin-right: 0.75em;
  margin-bottom: 0.5em;
}

.checkbox-filter {
  margin-right: 0.5em;
}

.schedule-events-container {
  display: flex;
  flex-wrap: wrap;
}

.schedule-event {
  background-color: color.adjust($schedule-block, $lightness: -10%);
  color: $schedule-text;
  padding: 0.5em;
  border-radius: $small-border-radius;
  margin-right: 1em;
  margin-bottom: 1em;

  &.cfp {
    border: 2px solid $brand-2026-light-blue;
  }

  .event-synopsis {
    display: flex;
    justify-content: space-between;
    cursor: pointer;

    .event-icons {
      margin-left: 0.5em;
      margin-top: 0.25em;
      display: flex;

      &:empty {
        display: none;
      }
    }

    h3 {
      margin-top: 0;
      margin-bottom: 0;
      font-size: 20px;

      &.abbreviate-titles {
        max-width: 400px;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
      }
    }

    p {
      font-size: 16px;
      margin-bottom: 0;
      padding-bottom: 0;
    }

    .speaker {
      color: $brand-2026-yellow;
      font-weight: bold;
    }
  }

  .event-details {
    margin-top: 1em;

    p {
      margin: 0;
      margin-bottom: 1em;
    }

    p.additional-information {
      margin-bottom: 0;
    }
  }

  .btn-warning {
    background-color: $brand-2026-yellow;
    color: #151735;
    font-weight: bold;
    border: none;
  }

  .btn-warning:active {
    background-color: $brand-2026-yellow;
    color: #151735;
    font-weight: bold;
    border: none;
  }
}

@media (max-width: 550px) {
  .schedule-event {
    width: 100%;
    margin-right: 0;
  }

  .form-inline .checkbox input {
    position: static;
    margin-left: 0;
    margin-right: 0em;
    margin-bottom: 0.5em;
  }
}

